<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/all_margin"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/itemCV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/nameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/all_margin"
            android:layout_marginTop="@dimen/all_margin"
            android:layout_marginBottom="@dimen/all_margin"
            android:text="@string/name"
            android:textSize="@dimen/nameTV_text_size"
            app:layout_constraintBottom_toTopOf="@+id/previousTV"
            app:layout_constraintStart_toEndOf="@+id/charcodeTV"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/charcodeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/all_margin"
            android:layout_marginTop="@dimen/all_margin"
            android:layout_marginBottom="8dp"
            android:text="@string/code"
            android:textSize="@dimen/charcodeTV_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/convert_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nominalTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/all_margin"
            android:layout_marginTop="@dimen/all_margin"
            android:layout_marginBottom="@dimen/all_margin"
            android:text="@string/nominal"
            app:layout_constraintBottom_toTopOf="@+id/previousTV"
            app:layout_constraintStart_toEndOf="@+id/charcodeTV"
            app:layout_constraintTop_toBottomOf="@+id/nameTV" />

        <TextView
            android:id="@+id/valueTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/all_margin"
            android:layout_marginEnd="@dimen/all_margin"
            android:layout_marginBottom="8dp"
            android:text="@string/value"
            android:textSize="@dimen/valueTV_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/convert_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/previousTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/all_margin"
            android:layout_marginTop="@dimen/all_margin"
            android:layout_marginBottom="8dp"
            android:text="@string/previous"
            app:layout_constraintBottom_toTopOf="@+id/convert_layout"
            app:layout_constraintStart_toEndOf="@+id/charcodeTV"
            app:layout_constraintTop_toBottomOf="@+id/nameTV" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/tap_to_convert"
            android:textSize="11sp"
            app:layout_constraintBottom_toTopOf="@+id/convert_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/convert_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible">

            <EditText
                android:id="@+id/sum_to_convertET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:hint="@string/sum_to_convertET_hint"
                android:textAppearance="?android:attr/textAppearanceSmallInverse"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/resultTV"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/resultTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/resultTvDefault"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/sum_to_convertET"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>